--- a/src/puppeteer/package.json
+++ b/src/puppeteer/package.json
@@ -19,11 +19,10 @@
     "watch": "tsc --watch"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "1.0.1",
-    "puppeteer": "^23.4.0"
+    "@modelcontextprotocol/sdk": "1.9.0",
+    "puppeteer": "^24.6.1"
   },
   "devDependencies": {
-    "shx": "^0.3.4",
-    "typescript": "^5.6.2"
+    "tsx": "^4.19.3"
   }
 }
