--- a/src/filesystem/package.json
+++ b/src/filesystem/package.json
@@ -30,6 +30,7 @@
     "@types/minimatch": "^5.1.2",
     "@types/node": "^22",
     "shx": "^0.3.4",
-    "typescript": "^5.3.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
